[tool.poetry]
name = "ctadata"
version = "0.6.2"
description = ""
authors = ["Volodymyr Savchenko <contact@volodymyrsavchenko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
importlib-metadata = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cta-data = "ctadata.cli:main"
